fix z-index of map

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -11,7 +11,6 @@ body, html
 #map 
 	{
 		height: 100%;
-		z-index: -9999;
     }
 
 .titre, .sous_titre
